@@ -1,3 +1,10 @@
+2008-03-26  Eitan Isaacson  <eitan@ascender.com>
+
+	* plugins/validate.glade:
+	* plugins/validate.py: Implement save functionality, 
+	thanks Brian Merrell! (bug #508665). Added an extra column 
+	to the append in _exceptionError()'s append to model.
+
 2008-03-16  Eitan Isaacson  <eitan@ascender.com>
 
 	* plugins/quick_select.py: Make it work better with tab lists 
